@@ -2,6 +2,7 @@
 package com.uchicom.plate;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.List;
 
@@ -20,71 +21,31 @@ public class CpInfo {
 
   private int status = 0;
 
-  /**
-   * @param classPath
-   * @throws MalformedURLException
-   */
   public CpInfo(String classPath) {
     try {
-      url = new URL(classPath);
+      url = URI.create(classPath).toURL();
     } catch (MalformedURLException e) {
       throw new RuntimeException(e);
     }
   }
 
-  /**
-   * @param protocol
-   * @param host
-   * @param file
-   * @throws MalformedURLException
-   */
-  public CpInfo(String protocol, String host, String file) throws MalformedURLException {
-    url = new URL(protocol, host, file);
-  }
-
-  /**
-   * urlを取得します。
-   *
-   * @return url
-   */
   public URL getUrl() {
     return url;
   }
 
-  /**
-   * urlを設定します。
-   *
-   * @param url
-   */
   public void setUrl(URL url) {
     this.url = url;
   }
 
-  /**
-   * statusを取得します。
-   *
-   * @return status
-   */
   public int getStatus() {
     return status;
   }
 
-  /**
-   * statusを設定します。
-   *
-   * @param status
-   */
   public void setStatus(int status) {
     this.status = status;
   }
 
-  /**
-   * リストからURLの配列に入れ替えつつ、 statusに引数のステータスを設定する。
-   *
-   * @param cpList
-   * @param status
-   * @return
-   */
+  /** リストからURLの配列に入れ替えつつ、 statusに引数のステータスを設定する。 */
   public static URL[] toUrlArray(List<CpInfo> cpList, int status) {
     int iMaxList = cpList.size();
     URL[] urls = new URL[iMaxList];
@@ -100,12 +61,7 @@ public class CpInfo {
     return urls;
   }
 
-  /**
-   * 初回ロード時にINCLUDEされていたデータをURLを作成する。
-   *
-   * @param cpList
-   * @return
-   */
+  /** 初回ロード時にINCLUDEされていたデータをURLを作成する。 */
   public static URL[] toUrlArrayInclude(List<CpInfo> cpList) {
     int iMaxList = 0;
     for (int iList = 0; iList < iMaxList; iList++) {
@@ -125,8 +81,9 @@ public class CpInfo {
     return urls;
   }
 
+  @Override
   public String toString() {
-    StringBuffer strBuff = new StringBuffer();
+    StringBuilder strBuff = new StringBuilder();
     strBuff.append("  ");
     //        strBuff.append((char) ('0' + iList)); //番号指定ではなくてパスを直接指定したほうがよさそう。
     //        strBuff.append(' ');
@@ -137,6 +94,7 @@ public class CpInfo {
     return strBuff.toString();
   }
 
+  @Override
   public int hashCode() {
     int hashCode = 0;
     if (url != null) {
@@ -145,10 +103,10 @@ public class CpInfo {
     return hashCode;
   }
 
+  @Override
   public boolean equals(Object object) {
     if (url != null && object != null) {
-      if (object instanceof CpInfo) {
-        CpInfo cp = (CpInfo) object;
+      if (object instanceof CpInfo cp) {
         if (url.getPath() != null && cp.url != null) {
           return url.getPath().equals(cp.url.getPath());
         }
